#452: Align teaser to the right, fix breakpoints

--- a/modules/wri_admin/css/admin.css
+++ b/modules/wri_admin/css/admin.css
@@ -187,3 +187,7 @@ form .fieldset {
 #auto-generate-password {
   width: 1.25rem;
 }
+
+.report-teaser figure {
+  margin: 0 0 20px 0;
+}
