--- a/themes/custom/ts_wrin/sass/components/_programs.scss
+++ b/themes/custom/ts_wrin/sass/components/_programs.scss
@@ -318,24 +318,3 @@
   @extend .margin-top-sm;
 }
 
-.report-teaser {
-  img {
-    max-height: 240px;
-    padding-bottom: $space-xs;
-    width: 180px;
-  }
-
-  p {
-    @include font($acumin-semi-cond, "semi-bold");
-    @include font-line-height(18, 26);
-  }
-
-  @media (min-width: 768px) and (max-width: 991px) {
-    align-items: center;
-    display: flex;
-
-    .media--type-image {
-      padding-right: $space-xs;
-    }
-  }
-}
